--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "InfiniteLoop",
   "version": "1.0.0",
-  "description": "npm install -> bundle install -> db:setup",
+  "description": "npm install -> bundle install -> db:create",
   "main": "index.js",
   "directories": {
     "doc": "docs",
